Добавил ModelMapper в мапперы
Добавил ModelMapper в мапперы.
вынес логику из мапперов в API